<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/lbl_Login"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/lbl_RegisterScreen_Register_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="357dp"
        android:layout_height="314dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <EditText
            android:id="@+id/txt_register_Name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/special_purple"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txt_register_Surname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/special_purple"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/surname_hint"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/txt_register_Email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/username_hint"
            android:backgroundTint="@color/special_purple"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/txt_register_Password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/password_hint"
            android:backgroundTint="@color/special_purple"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txt_register_Repassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/password_hint"
            android:backgroundTint="@color/special_purple"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/repasword_hint"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/cardview_dark_background"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_RegisterScreen_Register"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:background="@drawable/registerscreen_register_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/lbl_RegisterScreen_Register_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/special_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/btn_RegisterScreen_Login"
        android:layout_width="211dp"
        android:layout_height="66dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/btn_login_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>